test/black-box/v04/3.exp
[Line 5] Semantic error: Undeclared variable hortela.
