test/black-box/v04/3.toc
# Funcao principal do programa
void toc()
  int abacaxi
  hortela = 9
